--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
   
 env:
-  - BITCOIN_ELECTRS_PORT=3002 BITCOIN_ELECTRS_RPC_PORT=51401 BITCOIN_CHOPSTICKS_PORT=3000 BITCOIN_NODE_PORT=18433BITCOIN_ESPLORA_PORT=5000 LIQUID_CHOPSTICKS_PORT=3001 LIQUID_NODE_PORT=7041 LIQUID_ESPLORA_PORT=5001 LIQUID_ELECTRS_PORT=3012 LIQUID_ELECTRS_RPC_PORT=60401
+  - BITCOIN_ELECTRS_PORT=3002 BITCOIN_ELECTRS_RPC_PORT=51401 BITCOIN_CHOPSTICKS_PORT=3000 BITCOIN_NODE_PORT=18433 LIQUID_CHOPSTICKS_PORT=3001 LIQUID_NODE_PORT=7041 LIQUID_ELECTRS_PORT=3012 LIQUID_ELECTRS_RPC_PORT=60401
 
 before_install:
   - docker -v
