--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: true
 language: node_js
 
 services:
@@ -9,6 +10,7 @@ env:
 before_install:
   - docker -v
   - docker-compose -v
+  - chmod -R 777 . 
 
 install:
   - docker-compose build
@@ -18,6 +20,8 @@ before_script:
 
 script:
   - docker ps -a
+  - docker logs nigiri_bitcoin
+  - docker logs nigiri_liquid
 
 after_script:
   - docker-compose down
