--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ env:
 before_install:
   - docker -v
   - docker-compose -v
+  - mkdir -p config liquid-config
   - chmod -R 777 . 
+  - curl -o /config/bitcoin.conf -sL https://raw.githubusercontent.com/vulpemventures/nigiri-travis/master/bitcoin.conf
+  - curl -o /liquid-config/bitcoin.conf -sL https://raw.githubusercontent.com/vulpemventures/nigiri-travis/master/elements.conf
   - curl -o docker-compose.yml -sL https://raw.githubusercontent.com/vulpemventures/nigiri-travis/master/docker-compose.yml
 
 install:
