--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,14 @@
-sudo: true
-language: node_js
-
 services:
   - docker
-  
-env:
-  - BITCOIN_ELECTRS_PORT=3002 BITCOIN_ELECTRS_RPC_PORT=51401 BITCOIN_CHOPSTICKS_PORT=3000 BITCOIN_NODE_PORT=18433 LIQUID_CHOPSTICKS_PORT=3001 LIQUID_NODE_PORT=7041 LIQUID_ELECTRS_PORT=3012 LIQUID_ELECTRS_RPC_PORT=60401
-
-before_install:
-  - docker -v
-  - docker-compose -v
-  - mkdir -p config liquid-config
-  - chmod -R 777 . 
-  - curl -o ./config/bitcoin.conf -sL https://raw.githubusercontent.com/vulpemventures/nigiri-travis/master/bitcoin.conf
-  - curl -o ./liquid-config/bitcoin.conf -sL https://raw.githubusercontent.com/vulpemventures/nigiri-travis/master/elements.conf
-  - curl -o docker-compose.yml -sL https://raw.githubusercontent.com/vulpemventures/nigiri-travis/master/docker-compose.yml
-
+ 
 install:
-  - docker-compose build
+  - curl https://raw.githubusercontent.com/vulpemventures/nigiri-travis/master/index.sh | bash
 
 before_script:
   - docker-compose up -d
 
 script:
-  - docker ps -a
-  - curl http://localhost:3000/blocks
+  - curl http://localhost:3001/blocks
 
 
 after_script:
