--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: true
 services:
   - docker
  
@@ -9,8 +10,8 @@ install:
 
 script:
   - docker ps -a
-  - curl http://localhost:3000/blocks/tip/height
-  - curl http://localhost:3001/blocks/tip/height
+  - curl http://localhost:3000/blocks
+  - curl http://localhost:3001/blocks
 
 
 after_script:
